# OpenEnv-Finale

./: .gitignore  BENCHMARK.md  Claude.md  DEV_BRIEF.md  Dockerfile  Dockerfile.hfjobs  HH_RUNBOOK.md  HH_RUNBOOK_HF.md  IMPLEMENTATION_PLAN.md  README.md  eval_deployable.jsonl  eval_frontier.jsonl  eval_sft.jsonl  kaggle.json  openenv.yaml  output_diag.txt  pyproject.toml  test_instruction_rules.py  test_json.py  test_mu_instruction.py  test_prompt_load.py
docs/: blog_post.md  hackathon_progress.md  hypotheses.md  pitch_deck.md  project_reference.md  video_script.md
role_drift_env/: __init__.py  client.py  models.py
scripts/: 200ep_jobid.txt  200ep_post_mortem.md  analyze_diag.py  analyze_diag2.py  check_billing.py  check_episode_returns.py  check_error.py  check_eval_leakage.py  check_zip.py  closeout_v8_runtime.sh  compute_fire_rates.py  cpu_speed_test.py  create_hand_labels.py  create_tiny_model.py  debug_episode.py  debug_instr.py  debug_regex.py  detector_diagnostic_report.md  find_boundary_cases.py  generate_rollout_data.py  generate_scenarios.py  hf_auth_preflight.py  hf_job_smoke_inline.sh  hf_mini_smoke.ps1  hf_mini_smoke.sh  inspect_transcripts.py  kaggle_smoke_test.py  launch_hf_full_training.py  launch_hf_smoke_job.py  launch_hf_training_smoke.py  launch_hf_v9_training_job.py  launch_hfjob.sh  launch_v10_eval_bundle_a.py  launch_v9_job.py  make_plots.py  plot_diag2.py  plot_results.py  plot_training.py  print_closeout_headlines.py  regenerate_baseline_vs_trained_plot.py  (+13 more)
space/: README.md  app.py  requirements.txt
tests/: smoke_test_grpo.py  (+7 more)
(+63 files in other folders)
